# o-rads

./: README.md  main.py  pyproject.toml
assets/: FLOWCHART.html  FLOWCHART.md  FLOWCHART_DIAGRAM.md
orads/: __init__.py  app.py  cli.py  decision_tree.py
