[project]
name = "o-rads"
version = "0.1.0"
description = "O-RADS Ultrasound Decision Tree - Risk stratification for adnexal lesions"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Lance" }
]
keywords = ["orads", "ultrasound", "radiology", "decision-tree", "medical"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "toga>=0.5.3",
]

[project.scripts]
orads = "main:main"
orads-gui = "main:gui"
orads-cli = "orads.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orads"]

[dependency-groups]
dev = []
